# mviewer

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUALITY.md  README.md  SECURITY.md  STATUS.md  _v.sh  asan_log.txt  asan_log2.txt  asan_log3.txt  asan_log4.txt  build.cmd  build.ps1  build.sh  buildlog.txt  m4run.txt  pack_installer.ps1  pack_portable.ps1  prototype.py  run.cmd  run.sh  runm4.bat  test_package.ps1
plugins/example/: BadAbiAnalyzerPlugin.cpp  CMakeLists.txt  ExampleAnalyzerPlugin.cpp  ExampleDecoderPlugin.cpp  ExampleExporterPlugin.cpp  ExampleImporterPlugin.cpp  README.md
src/: CMakeLists.txt  analysispanel.cpp  analysispanel.h  analyze_main.cpp  appstate.cpp  appstate.h  batchdialog.cpp  batchdialog.h  benchmark_main.cpp  breadcrumbbar.cpp  breadcrumbbar.h  compareworkspace.cpp  compareworkspace.h  demo_render.cpp  demo_workflow.cpp  directorytree.cpp  directorytree.h  exportcommand.cpp  exportcommand.h  exportdialog.cpp  exportdialog.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  metadatamodel.cpp  metadatamodel.h  metadataoverlay.cpp  metadataoverlay.h  metadatapanel.cpp  metadatapanel.h  pluginsettings.cpp  pluginsettings.h  previewpanel.cpp  previewpanel.h  searchpanel.cpp  searchpanel.h  selectionmodel.cpp  selectionmodel.h  (+12 more)
src/application/: CompareImagesUseCase.cpp  CompareImagesUseCase.h  DeleteImageUseCase.cpp  DeleteImageUseCase.h  OpenDirectoryUseCase.cpp  OpenDirectoryUseCase.h  RenameImageUseCase.cpp  RenameImageUseCase.h  Startup.cpp  Startup.h
src/benchmark/: corpus.cpp  corpus.h  main.cpp  scenarios.cpp  scenarios.h
src/core/: AnalysisEngine.cpp  AnalysisEngine.h  CompareEngine.cpp  CompareEngine.h  CrashHandler.cpp  CrashHandler.h  Decoder.cpp  Decoder.h  EventBus.cpp  EventBus.h  FileSystem.cpp  FileSystem.h  ImageCache.cpp  ImageCache.h  ImageObject.cpp  RatingStore.cpp  RatingStore.h  RenderEngine.cpp  SelfTest.cpp  SelfTest.h  SidecarStore.cpp  SidecarStore.h  TaskScheduler.cpp  test_analysis_panel.cpp  test_analyzer_batch.cpp  test_analyzer_ext.cpp  test_assets_acceptance.cpp  test_benchmark.cpp  test_blinkcontroller.cpp  test_cache.cpp  test_commandstack.cpp  test_compare.cpp  test_compare_workflow.cpp  test_core.cpp  test_crashhandler.cpp  test_crop.cpp  test_datamodel.cpp  test_decoder.cpp  test_differenceengine.cpp  test_encoder.cpp  (+34 more)
src/core/analysis/: AnalysisEngine.cpp  AnalysisEngine.h  ExportReport.cpp  ExportReport.h  PixelInspector.cpp  PixelInspector.h  ReportHtml.cpp  ReportHtml.h
src/core/analyzer/: Analyzer.cpp  Analyzer.h  AnalyzerCapability.h  AnalyzerPipeline.cpp  AnalyzerPipeline.h  AnalyzerResult.h  BlurAnalyzer.cpp  BlurAnalyzer.h  BrightnessAnalyzer.cpp  BrightnessAnalyzer.h  ColorCastAnalyzer.cpp  ColorCastAnalyzer.h  ColorCheckerAnalyzer.cpp  ColorCheckerAnalyzer.h  ContrastAnalyzer.cpp  ContrastAnalyzer.h  DeadPixelAnalyzer.cpp  DeadPixelAnalyzer.h  EntropyAnalyzer.cpp  EntropyAnalyzer.h  ExposureAnalyzer.cpp  ExposureAnalyzer.h  HistogramAnalyzer.cpp  HistogramAnalyzer.h  MTFAnalyzer.cpp  MTFAnalyzer.h  NoiseAnalyzer.cpp  NoiseAnalyzer.h  PSNRAnalyzer.cpp  PSNRAnalyzer.h  RGBMeanAnalyzer.cpp  RGBMeanAnalyzer.h  SSIMAnalyzer.cpp  SSIMAnalyzer.h  SharpnessAnalyzer.cpp  SharpnessAnalyzer.h
src/core/batch/: BatchProcessor.cpp  BatchProcessor.h
src/core/benchmark/: Benchmark.cpp  Benchmark.h
src/core/cache/: CacheManager.cpp  CacheManager.h
src/core/command/: CallbackCommand.cpp  CallbackCommand.h  CommandRegistry.cpp  CommandRegistry.h  CommandStack.h  CompareCommand.cpp  CompareCommand.h  CropCommand.cpp  CropCommand.h  DeleteCommand.cpp  DeleteCommand.h  FileDeleteCommand.cpp  FileDeleteCommand.h  FileMoveCommand.cpp  FileMoveCommand.h  FileRenameCommand.cpp  FileRenameCommand.h  ICommand.h  LabelCommand.cpp  LabelCommand.h  OpenDirectoryCommand.cpp  OpenDirectoryCommand.h  RenameCommand.cpp  RenameCommand.h  RotateCommand.cpp  RotateCommand.h  ToggleHistogramCommand.cpp  ToggleHistogramCommand.h
src/core/compare/: BlinkController.cpp  BlinkController.h  CompareEngine.cpp  CompareEngine.h  CompareTypes.h  DifferenceEngine.cpp  DifferenceEngine.h  Histogram.h  PixelController.h  SelectionController.cpp  SelectionController.h  SyncController.cpp  SyncController.h  ViewportController.cpp  ViewportController.h
src/core/export/: ExportManager.cpp  ExportManager.h  ExporterRegistry.cpp  ExporterRegistry.h  IExporter.h
src/core/filesystem/: FileSystem.cpp  FileSystem.h
src/core/image/: Decoder.cpp  Decoder.h  DiskCache.cpp  DiskCache.h  Encoder.cpp  Encoder.h  ImageAdjust.h  ImageBuffer.h  ImageCache.cpp  ImageCache.h  ImageFrame.cpp  ImageFrame.h  ImageObject.cpp  ImageObject.h  ImageRepository.cpp  ImageRepository.h  ImageTransform.cpp  ImageTransform.h  MetadataReader.cpp  MetadataReader.h  QtConvert.cpp  QtConvert.h  RawMetadata.cpp  RawMetadata.h
src/core/image/decoder/: DecoderRegistry.cpp  DecoderRegistry.h  IDecoder.h  (+6 more)
src/core/import/: IImporter.h  ImporterRegistry.cpp  ImporterRegistry.h
src/core/job/: Job.h
src/core/perf/: MemoryTracker.cpp  MemoryTracker.h
src/core/plugin/: PluginABI.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h
src/core/project/: ProjectSerializer.cpp  ProjectSerializer.h
src/core/render/: RenderEngine.cpp  RenderEngine.h  TileCache.h  TileGrid.h  Viewport.h
src/core/scheduler/: TaskScheduler.cpp  TaskScheduler.h
src/core/search/: SearchEngine.cpp  SearchEngine.h
src/core/thumbnail/: ThumbnailPipeline.h
src/core/trace/: Trace.h  TraceSink.cpp  TraceSink.h
src/core/workspace/: WorkspaceSerializer.cpp  WorkspaceSerializer.h
src/domain/: BatchJob.h  CompareSession.h  Histogram.h  Image.h  Project.h  SearchQuery.h  SearchResult.h  Selection.h  Workspace.h
src/gpu/: GpuTileUploader.cpp  GpuTileUploader.h
src/widgets/: histogramwidget.cpp  histogramwidget.h  ratingwidget.cpp  ratingwidget.h  rawimageview.cpp  rawimageview.h
(+148 files in other folders)
